--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
     - "3.5"
     - "3.6"
+addons:
+    apt:
+        packages:
+            libsodium-dev
 install:
     - pip install -r requirements.txt
 script:
