--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 dist: trusty
-sudo: false
+sudo: required
 
 language: python
 python:
     - "3.5"
     - "3.6"
-addons:
-    apt:
-        packages:
-            libsodium-dev
 install:
-    - pip install -r requirements.txt
+  - sudo add-apt-repository -y ppa:chris-lea/libsodium
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libsodium13
+  - pip install -r requirements.txt
 script:
     - python -m unittest
