--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ install:
   - sudo apt-get install -y libsodium13
   - pip install -r requirements.txt
 script:
-    - python -m unittest
+    - coverage run -m unittest
+after_sucess:
+    - codeclimate-test-reporter
