--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
   - pip install -r requirements.txt
 script:
     - coverage run -m unittest
-after_sucess:
+after_success:
     - codeclimate-test-reporter
